Bug 313062 - Legend widget selects content when being panned
Summary: Legend widget selects content when being panned
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.6 (KDE 4.11)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks: 322788
  Show dependency treegraph
 
Reported: 2013-01-11 10:07 UTC by Bernhard Beschow
Modified: 2013-11-23 11:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.7.0 (KDE 4.12.0)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2013-01-11 10:07:11 UTC
On Maemo, when panning the legend widget, content gets selected at the same time. When trying to continue panning, one has to find an unselected area because panning on selections seems to be impossible.

Reproducible: Always

Steps to Reproduce:
1. Open legend widget in Marble (Maemo)
2. Pan the legend widget
Actual Results:  
Content gets selected, one has to find an unselected area to continue panning.

Expected Results:  
No content should get selected during panning. Panning should always be possible.
Comment 1 Bernhard Beschow 2013-11-23 11:49:36 UTC
Git commit 20475193a66582c90c74b8d7885fdc13ec09b13e by Bernhard Beschow.
Committed on 23/11/2013 at 11:45.
Pushed by beschow into branch 'KDE/4.12'.

suppress text selection under Maemo5

Text selection can still be triggered by double-tapping.
(cherry picked from commit 400b64d4f992c080da38a138bb425100e060f0a5)
FIXED-IN: 1.7.0 (KDE 4.12.0)

M  +25   -0    src/lib/marble/MarbleLegendBrowser.cpp

http://commits.kde.org/marble/20475193a66582c90c74b8d7885fdc13ec09b13e