suppress text selection under Maemo5

Text selection can still be triggered by double-tapping.
(cherry picked from commit 400b64d4f992c080da38a138bb425100e060f0a5)

BUG: 313062
FIXED-IN: 1.7.0 (KDE 4.12.0)